// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Blockquote renders correctly 1`] = `
<jest>
  <figure
    class="text-left"
  >
    <blockquote
      class="blockquote"
    >
      <p>
        A well-known quote, contained in a blockquote element.
      </p>
    </blockquote>
    <figcaption
      class="blockquote-footer"
    >
      Someone famous in    
      <cite
        title="Source title"
      >
        Source title
      </cite>
    </figcaption>
  </figure>
</jest>
`;

exports[`OE - Blockquote renders correctly with no attribution 1`] = `
<jest>
  <figure
    class="text-left"
  >
    <blockquote
      class="blockquote"
    >
      <p>
        A well-known quote, contained in a blockquote element.
      </p>
    </blockquote>
  </figure>
</jest>
`;

exports[`OE - Blockquote renders correctly with no cite 1`] = `
<jest>
  <figure
    class="text-left"
  >
    <blockquote
      class="blockquote"
    >
      <p>
        A well-known quote, contained in a blockquote element.
      </p>
    </blockquote>
    <figcaption
      class="blockquote-footer"
    >
      Someone famous in  
    </figcaption>
  </figure>
</jest>
`;

exports[`OE - Blockquote renders correctly with text aligned center 1`] = `
<jest>
  <figure
    class="text-center"
  >
    <blockquote
      class="blockquote"
    >
      <p>
        A well-known quote, contained in a blockquote element.
      </p>
    </blockquote>
    <figcaption
      class="blockquote-footer"
    >
      Someone famous in    
      <cite
        title="Source title"
      >
        Source title
      </cite>
    </figcaption>
  </figure>
</jest>
`;
